--- a/notas/topology.tex
+++ b/notas/topology.tex
@@ -1,10 +1,11 @@
-
 \part{Topics of Algebraic Topology}
 
 
 
 \chapter{Simplical sets and complexes}
-Simplicial complexes are more intuitive, and are the foundation of algebraic topology. Simplicial complexes were also called \textit{simplicial schemes} and simplicial sets, \textit{semi-simplicial} complexes. 
+References \cite{goerssSimplicialHomotopyTheory2009,hatcherAlgebraicTopology2021}\\
+
+Simplicial complexes are more intuitive, and are the foundation of algebraic topology. Simplicial are more suitable to be employed in proofs. Simplicial complexes were also called \textit{simplicial schemes} and simplicial sets, \textit{semi-simplicial} complexes. 
 
 \section{(Abstract) simplical complexes}
 
