--- a/notas/notas.bib
+++ b/notas/notas.bib
@@ -16,8 +16,6 @@
   publisher = {Springer},
   location = {New York, NY},
   doi = {10.1007/978-1-4684-9327-6},
-  url = {https://link.springer.com/10.1007/978-1-4684-9327-6},
-  urldate = {2024-06-20},
   isbn = {978-1-4684-9329-0 978-1-4684-9327-6},
   langid = {english},
   keywords = {Abelian group,Cohomology,Groups,Gruppe (Math.),Kohomologie},
@@ -31,11 +29,18 @@
   publisher = {Birkhäuser Basel},
   location = {Basel},
   doi = {10.1007/978-3-0346-0189-4},
-  url = {http://link.springer.com/10.1007/978-3-0346-0189-4},
-  urldate = {2024-06-11},
   isbn = {978-3-0346-0188-7 978-3-0346-0189-4},
   langid = {english},
   file = {/Users/abrahamrojasvega/Zotero/storage/WDRQYMWS/Goerss y Jardine - 2009 - Simplicial Homotopy Theory.pdf}
+}
+
+@misc{hatcherAlgebraicTopology2021,
+  title = {Algebraic {{Topology}}},
+  author = {Hatcher, Allen},
+  date = {2021},
+  url = {https://pi.math.cornell.edu/~hatcher/AT/AT.pdf},
+  langid = {english},
+  file = {/Users/abrahamrojasvega/Zotero/storage/W9KE4PQ6/Hatcher.pdf}
 }
 
 @misc{kupersHomologicalStabilityMinicourse2021,
@@ -46,6 +51,18 @@
   urldate = {2024-06-14},
   abstract = {These are the collected lecture notes for eCHT minicourse on homological stability in spring 2021.},
   file = {/Users/abrahamrojasvega/Zotero/storage/Z8SYHVQH/homstab.pdf}
+}
+
+@book{maySimplicialObjectsAlgebraic1967a,
+  title = {Simplicial Objects in Algebraic Topology},
+  author = {May, Jon Peter},
+  date = {1967},
+  series = {Midway Reprint},
+  publisher = {Univ. of Chicago Press},
+  location = {Chicago},
+  isbn = {978-0-226-51180-1},
+  pagetotal = {161},
+  file = {/Users/abrahamrojasvega/Zotero/storage/9AMW2G9Y/May - 1967 - Simplicial objects in algebraic topology.pdf}
 }
 
 @incollection{suslinStabilityAlgebraicKtheory1982,
@@ -59,8 +76,6 @@
   publisher = {Springer Berlin Heidelberg},
   location = {Berlin, Heidelberg},
   doi = {10.1007/BFb0062181},
-  url = {http://link.springer.com/10.1007/BFb0062181},
-  urldate = {2024-05-24},
   isbn = {978-3-540-11965-4 978-3-540-39553-9},
   langid = {english},
   file = {/Users/abrahamrojasvega/Zotero/storage/ACEER5D3/Suslin - 1982 - Stability in algebraic K-theory.pdf}
