--- a/notas/phdstudies.tex
+++ b/notas/phdstudies.tex
@@ -9,8 +9,8 @@
 \usepackage{extarrows}
 \usepackage{csquotes}
 \usepackage{tikz-cd}
-\usepackage[margin=2cm]{geometry}
 \usepackage{hyperref}
+\usepackage[margin=3cm]{geometry}
 \newtheorem{theo}{Theorem}
 \newtheorem{prop}{Proposition}
 \newtheorem{defi}{Definition}
@@ -35,7 +35,9 @@
 
 \tableofcontents
 
-\input{algebra.tex}
+\input{algebra1.tex}
+
+\input{algebra2.tex}
 
 \input{topology.tex}
 
